fix(guide): menu search on mobile (#7)

--- a/apps/guide/src/styles/main.module.scss
+++ b/apps/guide/src/styles/main.module.scss
@@ -14,7 +14,3 @@
 			'Noto Color Emoji';
 	}
 }
-
-[data-aria-hidden='true'] {
-	filter: blur(3.33px);
-}
